[package]
name = "dimensions"
version = "0.1.0"
authors = ["David O'Connor <david.alan.oconnor@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/David-OConnor/dimensions"
homepage = "https://github.com/David-OConnor/dimensions"
readme = "README.md"
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

# cargo build --target wasm32-unknown-unknown --lib
# wasm-bindgen target/wasm32-unknown-unknown/debug/dimensions.wasm --out-dir .

[[bin]]
name = "dimensions"
path = "src/bin.rs"

[dependencies]
ndarray = "^0.11.2"
gl = "^0.10.0"
stdweb = "^0.4.6"
stdweb-derive = "^0.4.0"
serde = "^1.0.59"
serde_json = "^1.0.17"
serde_derive = "^1.0.59"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize",]

# I want something more like this:
#[target.cfg(not(wasm32-unknown-unknown)).dependencies]
# gegz's not compatible with wasm-unknown-unknown.
[target.'cfg(windows)'.dependencies]
ggez = "^0.4.2"



[build-dependencies]
#cc = "1.0"
webgl_generator = "^0.1.0"

# WebGl.
#gl = "0.6.0"
#gl_generator = "0.5.0"
#wasm-bindgen = "0.2"
#cgmath = "0.16.1"
#quaternion = "0.3.0"
