[package]
name = "dimensions"
version = "0.1.0"
authors = ["David O'Connor <david.alan.oconnor@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/David-OConnor/dimensions"
homepage = "https://github.com/David-OConnor/dimensions"
readme = "README.md"
#build = "build.rs"

[lib]
name="webgl"
path = "src/lib.rs"
crate-type = ["cdylib"]

# cargo build --target wasm32-unknown-unknown --lib

# wasm-bindgen target/wasm32-unknown-unknown/debug/webgl.wasm --out-dir .

[[bin]]
name = "dimensions"
path = "src/main.rs"

[dependencies]
ndarray = "^0.11.2"
rand = "^0.5.3"

# WASM
#[dependencies.wasm-bindgen]
#version = "^0.2"
#features = ["serde-serialize",]

# I want something more like this:
#[target.cfg(not(wasm32-unknown-unknown)).dependencies]
# vulkan's not compatible with wasm-unknown-unknown.
[target.'cfg(windows)'.dependencies]
# Vulkano
vulkano = "^0.9"
vulkano-shader-derive = "^0.9"
vulkano-win = "^0.9"
winit = "^0.11.0"
time = "^0.1.37"
simdnoise = "2.3.2"  # This breaks wasm for some reason.

[target.wasm32-unknown-unknown.dependencies]
#stdweb = "^0.4.7"
serde = "^1.0.59"
serde_json = "^1.0.17"
serde_derive = "^1.0.59"
wasm-bindgen = "^0.2"
#proc-macro2 = { version = "^0.4.6", features = ["nightly"] }
