[package]
name = "dimensions"
version = "0.1.0"
authors = ["David O'Connor <david.alan.oconnor@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/David-OConnor/dimensions"
homepage = "https://github.com/David-OConnor/dimensions"
readme = "README.md"

[lib]
name="from_rust"
path = "src/lib.rs"
crate-type = ["cdylib"]

# cargo build --target wasm32-unknown-unknown --lib

# wasm-bindgen target/wasm32-unknown-unknown/debug/from_rust.wasm --out-dir ./frontend/src

[[bin]]
name = "dimensions"
path = "src/main.rs"

[dependencies]
ndarray = "^0.11.2"
rand = "^0.5.3"
#wbg-rand = "^0.4.0"
noise = "^0.5.1"
serde = "^1.0.59"
serde_derive = "^1.0.59"

# I want something more like this:
#[target.cfg(not(wasm32-unknown-unknown)).dependencies]
# vulkan's not compatible with wasm32-unknown-unknown.
[target.'cfg(windows)'.dependencies]
# Vulkano
vulkano = "^0.9"
vulkano-shader-derive = "^0.9"
vulkano-win = "^0.9"
winit = "^0.11.0"
time = "^0.1.37"
simdnoise = "2.3.2"  # simdnoise is not compatibile with wasm due to SIMD use.

[target.wasm32-unknown-unknown.dependencies]
#yew = "^0.4.0"


[dependencies.wasm-bindgen]
version = "^0.2.15"
features = ["serde-serialize"]

